apps/netalertx/namespace-netalertx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netalertx
  labels:
    pod-security.kubernetes.io/enforce: privileged
