apps/netalertx/deployment-netalertx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netalertx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: netalertx
  template:
    metadata:
      labels:
        app: netalertx
    spec:
      securityContext:
        fsGroup: 20211
      containers:
      - name: netalertx
        image: ghcr.io/jokob-sk/netalertx:26.6
        securityContext:
          # enable read only root filesystem
          # https://github.com/jokob-sk/NetAlertX/blob/main/docs/docker-troubleshooting/read-only-filesystem.md
          readOnlyRootFilesystem: true
          # Add required capabilities for network scanning
          # https://github.com/jokob-sk/NetAlertX/blob/main/docs/docker-troubleshooting/missing-capabilities.md
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
            - NET_BiND_SERVICE
            - CHOWN
            - SETUID
            - SETGID
            drop:
            - ALL
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - mountPath: /data
          name: netalertx-data
        - mountPath: /tmp
          name: netalertx-tmpfs
      volumes:
      - name: netalertx-data
        persistentVolumeClaim:
          claimName: netalertx-data
      - name: netalertx-tmpfs
        emptyDir:
          medium: Memory
