apps/netalertx/service-netalertx.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netalertx
  name: netalertx
spec:
  ports:
    - port: 20211
      targetPort: 20211
  selector:
    app: netalertx
