apps/netalertx/ingress-netalertx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netalertx
spec:
  ingressClassName: cilium
  rules:
  - host: netalertx.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: netalertx
            port:
              number: 20211
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - netalertx.almothana.xyz
      secretName: almothana-xyz-tls
